# zilch

./: .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  api.py  ci.sh  cli.py  console.py  flake.nix  flake.nix.template  pre-commit.sh  pyproject.toml  search.py  todo.org  zilch.py
.github/workflows/: main.yml
tests/: test_cli.py
zilch/: api.py  cli.py
