[tool.poetry]
name = "zilch"
version = "0.1.0"
description = "blank"
authors = ["Evan, and thats it"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
tomlkit = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
